Remove Netlify deployment, revert to Cloudflare Pages only
- Remove netlify.toml and .netlify folder
- Update wrangler.toml for proper Cloudflare Pages configuration
- Add cache-busting headers to force fresh content delivery
- Clean rebuild with latest SitePulse changes

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
-name = "sitepulse-frontend"
+name = "wordpress-site-health-analyzer"
 compatibility_date = "2024-01-01"
 
-[env.production.site]
+[site]
 bucket = "./frontend/build"
